mi primer commit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EJERCICIOS DE CSS2</title>
+    <title>git y github</title>
     <link rel="stylesheet" href="css/style.css">
     <style>
         h1{
@@ -19,8 +19,6 @@
     
     <p>Bienvenido a este blog de conciertos...</p>
 
-<img src="img/concert.jpg"alt="concierto" style="width: 80%" ><br>
-    <a href= "mailto:info@tuconcierto.com">Info</a> 
 
 </div> 
     
